// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BranchCardMini matches snapshot 1`] = `
<div>
  <a
    href="/post/something/version/c-2"
  >
    <div
      class="flex flex-col relative overflow-hidden height-auto text-foreground box-border bg-content1 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 shadow-medium rounded-large transition-transform-background motion-reduce:transition-none w-full"
      tabindex="-1"
    >
      <div
        class="flex p-3 z-10 w-full justify-start items-center shrink-0 overflow-inherit color-inherit subpixel-antialiased rounded-t-large gap-2"
      >
        <h3
          class="font-semibold"
        >
          Something
        </h3>
        <h6
          class="text-neutral-400"
        >
          Created on 
          16/06/2024
        </h6>
        <p
          class="text-sm"
        >
          Accepted on 16/06/2024
        </p>
        <div
          class="grow"
        />
        <div
          class="flex flex-row"
        >
          <svg
            aria-hidden="true"
            class="size-10 text-success"
            data-slot="icon"
            data-testid="review-chip-accept"
            fill="currentColor"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14Zm3.844-8.791a.75.75 0 0 0-1.188-.918l-3.7 4.79-1.649-1.833a.75.75 0 1 0-1.114 1.004l2.25 2.5a.75.75 0 0 0 1.15-.043l4.25-5.5Z"
              fill-rule="evenodd"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="size-10 text-success"
            data-slot="icon"
            data-testid="review-chip-accept"
            fill="currentColor"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14Zm3.844-8.791a.75.75 0 0 0-1.188-.918l-3.7 4.79-1.649-1.833a.75.75 0 1 0-1.114 1.004l2.25 2.5a.75.75 0 0 0 1.15-.043l4.25-5.5Z"
              fill-rule="evenodd"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="size-10 text-success"
            data-slot="icon"
            data-testid="review-chip-accept"
            fill="currentColor"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14Zm3.844-8.791a.75.75 0 0 0-1.188-.918l-3.7 4.79-1.649-1.833a.75.75 0 1 0-1.114 1.004l2.25 2.5a.75.75 0 0 0 1.15-.043l4.25-5.5Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`BranchCardMini matches snapshot when short 1`] = `
<div>
  <a
    href="/post/something/version/c-2"
  >
    <div
      class="flex flex-col relative overflow-hidden height-auto text-foreground box-border bg-content1 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 shadow-medium rounded-large transition-transform-background motion-reduce:transition-none w-full"
      tabindex="-1"
    >
      <div
        class="relative flex w-full p-3 flex-auto flex-col place-content-inherit align-items-inherit h-auto break-words text-left overflow-y-auto subpixel-antialiased"
      >
        <h3
          class="font-semibold"
        >
          Something
        </h3>
        <h6
          class="text-neutral-400"
        >
          Created on 
          16/06/2024
        </h6>
      </div>
      <div
        class="p-3 h-auto flex w-full items-center overflow-hidden color-inherit subpixel-antialiased rounded-b-large"
      >
        <p
          class="text-sm"
        >
          Accepted on 16/06/2024
        </p>
        <div
          class="grow"
        />
        <div
          class="flex flex-row"
        >
          <svg
            aria-hidden="true"
            class="size-10 text-success"
            data-slot="icon"
            data-testid="review-chip-accept"
            fill="currentColor"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14Zm3.844-8.791a.75.75 0 0 0-1.188-.918l-3.7 4.79-1.649-1.833a.75.75 0 1 0-1.114 1.004l2.25 2.5a.75.75 0 0 0 1.15-.043l4.25-5.5Z"
              fill-rule="evenodd"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="size-10 text-success"
            data-slot="icon"
            data-testid="review-chip-accept"
            fill="currentColor"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14Zm3.844-8.791a.75.75 0 0 0-1.188-.918l-3.7 4.79-1.649-1.833a.75.75 0 1 0-1.114 1.004l2.25 2.5a.75.75 0 0 0 1.15-.043l4.25-5.5Z"
              fill-rule="evenodd"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="size-10 text-success"
            data-slot="icon"
            data-testid="review-chip-accept"
            fill="currentColor"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14Zm3.844-8.791a.75.75 0 0 0-1.188-.918l-3.7 4.79-1.649-1.833a.75.75 0 1 0-1.114 1.004l2.25 2.5a.75.75 0 0 0 1.15-.043l4.25-5.5Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </a>
</div>
`;
